@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.10
 
+	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)
 	- Added Xft2 font lookup table (STR #2215)
 	- Fixed X server "lock", if a modal dialog window is opened
 	  while a menu is active (STR #1986)
